language/move-compiler/tests/move_check/translate/let_invalid_top_level.exp
error[E02018]: invalid let expresstion
  ┌─ tests/move_check/translate/let_invalid_top_level.move:1:1
  │
1 │ let a = 1;
  │ ^^^^^^^^^^ Invalid code unit. Expected 'address', 'module', or 'script'. Got 'let'

